--- a/app/src/main/res/layout/loan2_detail_screen.xml
+++ b/app/src/main/res/layout/loan2_detail_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Loan2_detail_screen">
+    tools:context=".Loan2DetailScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
