--- a/app/src/main/res/layout/view_history.xml
+++ b/app/src/main/res/layout/view_history.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View_History"
+    tools:context=".ViewHistory"
     android:orientation="vertical" >
 
     <androidx.appcompat.widget.Toolbar
