--- a/app/src/main/res/layout/bookmark_list.xml
+++ b/app/src/main/res/layout/bookmark_list.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="20dp">
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -94,7 +94,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_loan1"
+            android:id="@+id/btn_rent_house_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -106,7 +106,7 @@
             android:textSize="15dp" />
 
         <Button
-            android:id="@+id/btn_loan2"
+            android:id="@+id/btn_mortgage_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -117,7 +117,7 @@
             android:textSize="15dp" />
 
         <Button
-            android:id="@+id/btn_loan3"
+            android:id="@+id/btn_credit_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
