--- a/app/src/main/res/layout/deposit_list.xml
+++ b/app/src/main/res/layout/deposit_list.xml
@@ -17,7 +17,7 @@
         android:layout_weight="1">
 
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
