--- a/app/src/main/res/layout/annuity_saving.xml
+++ b/app/src/main/res/layout/annuity_saving.xml
@@ -20,7 +20,7 @@
         app:title="금융팔레트"/>
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -85,7 +85,7 @@
         </Spinner>
 
         <ImageView
-            android:id="@+id/image1"
+            android:id="@+id/img_view_find"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="15dp"
