--- a/app/src/main/res/layout/annuity_saving_list.xml
+++ b/app/src/main/res/layout/annuity_saving_list.xml
@@ -15,7 +15,7 @@
         android:layout_weight="1">
 
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -48,7 +48,7 @@
         android:gravity="end|center_vertical">
 
         <TextView
-            android:id="@+id/pnsn_kind_nm"
+            android:id="@+id/pnsn_type_nm"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
