--- a/app/src/main/res/layout/credit_loan.xml
+++ b/app/src/main/res/layout/credit_loan.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Loan3"
+    tools:context=".CreditLoan"
     android:orientation="vertical" >
 
     <androidx.appcompat.widget.Toolbar
@@ -20,7 +20,7 @@
         app:title="금융팔레트"/>
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -37,7 +37,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_loan1"
+            android:id="@+id/btn_rent_house_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
@@ -49,7 +49,7 @@
             android:textSize="15dp" />
 
         <Button
-            android:id="@+id/btn_loan2"
+            android:id="@+id/btn_mortgage_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -94,7 +94,7 @@
         </Spinner>
 
         <ImageView
-            android:id="@+id/image1"
+            android:id="@+id/img_view_find"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="15dp"
@@ -102,7 +102,7 @@
     </LinearLayout>
 
 
-    <!--       loan3_list.xml에 요소 추가        -->
+    <!--       credit_loan_list.xml에 요소 추가        -->
     <ListView
         android:id="@+id/listViewLp3"
         android:layout_width="match_parent"
