--- a/app/src/main/res/layout/credit_loan_list.xml
+++ b/app/src/main/res/layout/credit_loan_list.xml
@@ -15,7 +15,7 @@
         android:layout_weight="1">
 
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -31,12 +31,13 @@
 
 
     <TextView
-        android:id="@+id/lend_rate_min"
+        android:id="@+id/lowest_loan_rate"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textColor="#ff0000" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -47,28 +48,17 @@
         android:gravity="end|center_vertical">
 
         <TextView
-            android:id="@+id/lend_rate_type_nm"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="금리유형"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            android:gravity="center"
-            android:background="@drawable/solid_button"
-            android:backgroundTint="@color/blue"/>
-
-        <TextView
-            android:id="@+id/rpay_type_nm"
-            android:layout_width="120dp"
+            android:id="@+id/crdt_prdt_type_nm"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="적립유형"
+            android:layout_marginBottom="20dp"
+            android:text="대출 종류"
             android:textColor="@color/white"
             android:textSize="15dp"
             android:gravity="center"
             android:background="@drawable/solid_button"
             android:backgroundTint="@color/mid_green"/>
-
 
     </LinearLayout>
 
