--- a/app/src/main/res/layout/rec5000.xml
+++ b/app/src/main/res/layout/rec5000.xml
@@ -20,7 +20,7 @@
         app:title="금융팔레트"/>
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
