--- a/app/src/main/res/layout/rec5000_list.xml
+++ b/app/src/main/res/layout/rec5000_list.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
