--- a/app/src/main/res/layout/rent_house_loan_list.xml
+++ b/app/src/main/res/layout/rent_house_loan_list.xml
@@ -14,9 +14,8 @@
         android:orientation="vertical"
         android:layout_weight="1">
 
-
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -32,13 +31,12 @@
 
 
     <TextView
-        android:id="@+id/lend_rate_min"
+        android:id="@+id/min_loan_rate"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textColor="#ff0000" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -49,7 +47,7 @@
         android:gravity="end|center_vertical">
 
         <TextView
-            android:id="@+id/lend_rate_type_nm"
+            android:id="@+id/loan_rate_type"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="금리유형"
@@ -60,7 +58,7 @@
             android:backgroundTint="@color/blue"/>
 
         <TextView
-            android:id="@+id/rpay_type_nm"
+            android:id="@+id/loan_rpay_type"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
