--- a/app/src/main/res/layout/savings_list.xml
+++ b/app/src/main/res/layout/savings_list.xml
@@ -16,7 +16,7 @@
         android:layout_weight="1">
 
     <TextView
-        android:id="@+id/kor_co_nm"
+        android:id="@+id/fin_co_nm"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -58,7 +58,7 @@
             android:backgroundTint="@color/blue"/>
 
         <TextView
-            android:id="@+id/rsrv_type_nm"
+            android:id="@+id/accrual_type_nm"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
