--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -53,7 +53,7 @@
             tools:layout_editor_absoluteY="111dp" />
 
         <Button
-            android:id="@+id/btn_mySurvey"
+            android:id="@+id/btn_my_survey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -89,7 +89,7 @@
             tools:layout_editor_absoluteY="111dp" />
 
         <Button
-            android:id="@+id/btn_myBookmark"
+            android:id="@+id/btn_my_bookmark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -125,7 +125,7 @@
             tools:layout_editor_absoluteY="111dp" />
 
         <Button
-            android:id="@+id/btn_myViewHistory"
+            android:id="@+id/btn_my_view_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
